src/objects/SprintUser__c.object
<CustomObject>
    <description>Agile Process Management</description>
    <fields>
        <fullName>ActualHours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvailabilityRatio__c</fullName>
        <formula>CASE (Availability__c,
 &apos;1/2 Time&apos;, 0.50,
 &apos;1/4 Time&apos;, 0.25,
 &apos;3/4 Time&apos;, 0.75,
 &apos;As Needed&apos;, 0.00,
 &apos;Full Time&apos;, 1.00, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3/4 Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2 Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4 Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This formula field exists to be displayed in related lists.</description>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedHours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsInlineEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inline Edit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnmanaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unmanaged?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <formula>User__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>User__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SprintCompletesOn__c</fullName>
        <description>This formula field exists to be displayed in related lists.</description>
        <formula>Sprint__r.CompletesOn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completes On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SprintStartsOn__c</fullName>
        <description>This formula field exists to be displayed in related lists.</description>
        <formula>Sprint__r.StartsOn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starts On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SprintStatus__c</fullName>
        <description>This formula field exists to be displayed in related lists.</description>
        <formula>TEXT(Sprint__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Sprint Users</relationshipLabel>
        <relationshipName>SprintUsers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <label>User Role (Obsolete)</label>
        <referenceTo>UserRole__c</referenceTo>
        <relationshipLabel>Sprint Users (Obsolete)</relationshipLabel>
        <relationshipName>Sprint_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sprint_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkstreamLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; WorkstreamUser__r.Workstream__c, WorkstreamUser__r.Workstream__r.Name, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workstream</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkstreamRole__c</fullName>
        <label>User Role</label>
        <referenceTo>WorkstreamRole__c</referenceTo>
        <relationshipLabel>Sprint Users</relationshipLabel>
        <relationshipName>SprintUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkstreamUser__c</fullName>
        <label>Workstream User</label>
        <referenceTo>WorkstreamUser__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>SprintUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sprint User</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SprintUser_ActualHoursIsPositive</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(ActualHours__c), ActualHours__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>ActualHours__c</errorDisplayField>
        <errorMessage>Actual Hours cannot be a negative number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SprintUser_EstimatedHoursIsPositive</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(EstimatedHours__c),  EstimatedHours__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>EstimatedHours__c</errorDisplayField>
        <errorMessage>Estimated Hours cannot be a negative number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SprintUser_SprintIsNotGeneralBacklog</fullName>
        <active>true</active>
        <errorConditionFormula>Sprint__r.IsGeneralBacklog__c</errorConditionFormula>
        <errorMessage>Sprint Users cannot be added to a General Backlog Sprint.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SprintUser_UserIsNotMissing</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>User cannot be missing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SprintUser_WorkstreamUserIsNotMissing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(IsUnmanaged__c), ISBLANK(WorkstreamUser__c))</errorConditionFormula>
        <errorDisplayField>WorkstreamUser__c</errorDisplayField>
        <errorMessage>Workstream User cannot be missing for a managed Sprint User.</errorMessage>
    </validationRules>
</CustomObject>